gen/parser/GLangParser.java
// Generated from /Users/admin/IdeaProjects/Project1Group7/src/parser/GLangParser.g4 by ANTLR 4.13.2
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class GLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEFINE=1, COMPOSE=2, LOOP=3, END=4, TYPE_CHORD=5, TYPE_BAR=6, TYPE_SEGMENT=7, 
		TYPE_FUNCTION=8, TYPE_NUMBER=9, CHORDS=10, STRINGS=11, PATTERN=12, PLAYED=13, 
		BAR=14, LPAREN=15, RPAREN=16, LBRACK=17, RBRACK=18, COLON=19, COMMA=20, 
		DOT=21, DASH=22, PLUS=23, EQUALS=24, NUMBER=25, X=26, NAME=27, ID=28, 
		NEWLINE=29, WS=30, COMMENT=31;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_defineStmt = 2, RULE_chordDef = 3, 
		RULE_fret = 4, RULE_barDef = 5, RULE_barExpr = 6, RULE_barArgs = 7, RULE_barArg = 8, 
		RULE_barSequence = 9, RULE_barItem = 10, RULE_pattern = 11, RULE_patternItem = 12, 
		RULE_segmentDef = 13, RULE_loopSpec = 14, RULE_segmentBody = 15, RULE_segmentLine = 16, 
		RULE_composeStmt = 17, RULE_composeBody = 18, RULE_composeLine = 19, RULE_mutationStmt = 20, 
		RULE_valueAccess = 21, RULE_access = 22, RULE_functionDef = 23, RULE_functionBody = 24, 
		RULE_paramList = 25, RULE_param = 26, RULE_functionCallStmt = 27, RULE_argList = 28, 
		RULE_arg = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "defineStmt", "chordDef", "fret", "barDef", "barExpr", 
			"barArgs", "barArg", "barSequence", "barItem", "pattern", "patternItem", 
			"segmentDef", "loopSpec", "segmentBody", "segmentLine", "composeStmt", 
			"composeBody", "composeLine", "mutationStmt", "valueAccess", "access", 
			"functionDef", "functionBody", "paramList", "param", "functionCallStmt", 
			"argList", "arg"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Define'", "'Compose'", null, null, "'CHORD'", "'BAR'", "'SEGMENT'", 
			"'FUNCTION'", "'NUMBER'", "'chords'", "'strings'", "'pattern'", "'played'", 
			"'bar'", "'('", "')'", "'['", "']'", "':'", "','", "'.'", "'-'", "'+'", 
			"'='", null, "'X'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEFINE", "COMPOSE", "LOOP", "END", "TYPE_CHORD", "TYPE_BAR", "TYPE_SEGMENT", 
			"TYPE_FUNCTION", "TYPE_NUMBER", "CHORDS", "STRINGS", "PATTERN", "PLAYED", 
			"BAR", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COLON", "COMMA", "DOT", 
			"DASH", "PLUS", "EQUALS", "NUMBER", "X", "NAME", "ID", "NEWLINE", "WS", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GLangParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GLangParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(GLangParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GLangParser.NEWLINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(60);
						match(NEWLINE);
						}
						}
						setState(65);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(66);
					statement();
					}
					} 
				}
				setState(71);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(72);
				match(NEWLINE);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public DefineStmtContext defineStmt() {
			return getRuleContext(DefineStmtContext.class,0);
		}
		public ComposeStmtContext composeStmt() {
			return getRuleContext(ComposeStmtContext.class,0);
		}
		public MutationStmtContext mutationStmt() {
			return getRuleContext(MutationStmtContext.class,0);
		}
		public FunctionCallStmtContext functionCallStmt() {
			return getRuleContext(FunctionCallStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				defineStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				composeStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				mutationStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				functionCallStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefineStmtContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(GLangParser.DEFINE, 0); }
		public ChordDefContext chordDef() {
			return getRuleContext(ChordDefContext.class,0);
		}
		public BarDefContext barDef() {
			return getRuleContext(BarDefContext.class,0);
		}
		public SegmentDefContext segmentDef() {
			return getRuleContext(SegmentDefContext.class,0);
		}
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public DefineStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterDefineStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitDefineStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitDefineStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineStmtContext defineStmt() throws RecognitionException {
		DefineStmtContext _localctx = new DefineStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defineStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(DEFINE);
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE_CHORD:
				{
				setState(87);
				chordDef();
				}
				break;
			case TYPE_BAR:
				{
				setState(88);
				barDef();
				}
				break;
			case TYPE_SEGMENT:
				{
				setState(89);
				segmentDef();
				}
				break;
			case TYPE_FUNCTION:
				{
				setState(90);
				functionDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChordDefContext extends ParserRuleContext {
		public TerminalNode TYPE_CHORD() { return getToken(GLangParser.TYPE_CHORD, 0); }
		public TerminalNode NAME() { return getToken(GLangParser.NAME, 0); }
		public List<FretContext> fret() {
			return getRuleContexts(FretContext.class);
		}
		public FretContext fret(int i) {
			return getRuleContext(FretContext.class,i);
		}
		public ChordDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chordDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterChordDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitChordDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitChordDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChordDefContext chordDef() throws RecognitionException {
		ChordDefContext _localctx = new ChordDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_chordDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(TYPE_CHORD);
			setState(94);
			match(NAME);
			setState(95);
			fret();
			setState(96);
			fret();
			setState(97);
			fret();
			setState(98);
			fret();
			setState(99);
			fret();
			setState(100);
			fret();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FretContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(GLangParser.NUMBER, 0); }
		public TerminalNode X() { return getToken(GLangParser.X, 0); }
		public TerminalNode DASH() { return getToken(GLangParser.DASH, 0); }
		public FretContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fret; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterFret(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitFret(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitFret(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FretContext fret() throws RecognitionException {
		FretContext _localctx = new FretContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fret);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 104857600L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BarDefContext extends ParserRuleContext {
		public TerminalNode TYPE_BAR() { return getToken(GLangParser.TYPE_BAR, 0); }
		public TerminalNode NAME() { return getToken(GLangParser.NAME, 0); }
		public BarExprContext barExpr() {
			return getRuleContext(BarExprContext.class,0);
		}
		public BarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_barDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterBarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitBarDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitBarDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BarDefContext barDef() throws RecognitionException {
		BarDefContext _localctx = new BarDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_barDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(TYPE_BAR);
			setState(105);
			match(NAME);
			setState(106);
			barExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BarExprContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(GLangParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(GLangParser.RPAREN, 0); }
		public BarArgsContext barArgs() {
			return getRuleContext(BarArgsContext.class,0);
		}
		public BarSequenceContext barSequence() {
			return getRuleContext(BarSequenceContext.class,0);
		}
		public BarExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_barExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterBarExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitBarExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitBarExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BarExprContext barExpr() throws RecognitionException {
		BarExprContext _localctx = new BarExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_barExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(LPAREN);
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CHORDS:
			case PATTERN:
			case PLAYED:
				{
				setState(109);
				barArgs();
				}
				break;
			case LPAREN:
			case NAME:
				{
				setState(110);
				barSequence();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(113);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BarArgsContext extends ParserRuleContext {
		public List<BarArgContext> barArg() {
			return getRuleContexts(BarArgContext.class);
		}
		public BarArgContext barArg(int i) {
			return getRuleContext(BarArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GLangParser.COMMA, i);
		}
		public BarArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_barArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterBarArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitBarArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitBarArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BarArgsContext barArgs() throws RecognitionException {
		BarArgsContext _localctx = new BarArgsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_barArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			barArg();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(116);
				match(COMMA);
				setState(117);
				barArg();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BarArgContext extends ParserRuleContext {
		public TerminalNode CHORDS() { return getToken(GLangParser.CHORDS, 0); }
		public TerminalNode EQUALS() { return getToken(GLangParser.EQUALS, 0); }
		public TerminalNode NAME() { return getToken(GLangParser.NAME, 0); }
		public TerminalNode PATTERN() { return getToken(GLangParser.PATTERN, 0); }
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public TerminalNode PLAYED() { return getToken(GLangParser.PLAYED, 0); }
		public TerminalNode NUMBER() { return getToken(GLangParser.NUMBER, 0); }
		public BarArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_barArg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterBarArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitBarArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitBarArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BarArgContext barArg() throws RecognitionException {
		BarArgContext _localctx = new BarArgContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_barArg);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CHORDS:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				match(CHORDS);
				setState(124);
				match(EQUALS);
				setState(125);
				match(NAME);
				}
				break;
			case PATTERN:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				match(PATTERN);
				setState(127);
				match(EQUALS);
				setState(128);
				pattern();
				}
				break;
			case PLAYED:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				match(PLAYED);
				setState(130);
				match(EQUALS);
				setState(131);
				match(NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BarSequenceContext extends ParserRuleContext {
		public List<BarItemContext> barItem() {
			return getRuleContexts(BarItemContext.class);
		}
		public BarItemContext barItem(int i) {
			return getRuleContext(BarItemContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GLangParser.COMMA, i);
		}
		public BarSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_barSequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterBarSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitBarSequence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitBarSequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BarSequenceContext barSequence() throws RecognitionException {
		BarSequenceContext _localctx = new BarSequenceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_barSequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			barItem();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(135);
				match(COMMA);
				setState(136);
				barItem();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BarItemContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GLangParser.NAME, 0); }
		public TerminalNode LPAREN() { return getToken(GLangParser.LPAREN, 0); }
		public BarArgsContext barArgs() {
			return getRuleContext(BarArgsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GLangParser.RPAREN, 0); }
		public BarItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_barItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterBarItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitBarItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitBarItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BarItemContext barItem() throws RecognitionException {
		BarItemContext _localctx = new BarItemContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_barItem);
		try {
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				match(NAME);
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				match(LPAREN);
				setState(144);
				barArgs();
				setState(145);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PatternContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(GLangParser.LPAREN, 0); }
		public List<PatternItemContext> patternItem() {
			return getRuleContexts(PatternItemContext.class);
		}
		public PatternItemContext patternItem(int i) {
			return getRuleContext(PatternItemContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(GLangParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GLangParser.COMMA, i);
		}
		public PatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).enterPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GLangParserListener ) ((GLangParserListener)listener).exitPattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GLangParserVisitor ) return ((GLangParserVisitor<? extends T>)visitor).visitPattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PatternContext pattern() throws RecognitionException {
		PatternContext _localctx = new PatternContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_pattern);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(LPAREN);
			setState(150);
			patternItem();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(151);
				match(COMMA);
				setState(152);
				patternItem();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
